Assignment2_Zhao_Duo/tests/bad/ScientificNotationBigBlandWithBadCharacters.calc
a .0%E23 b 1.%E25 c 2.3%E31 d 34.5%E45 e 6.78%E73 f 99.99%E56 g 3%E93 h 76%E45
.0%E23
1.%E25
2.3%E31
34.5%E45
6.78%E73
99.99%E56
3%E93
76%E45
a .0%E2 b 1.%E2 c 2.3%E3 d 34.5%E4 e 6.78%E7 f 99.99%E5 g 3%E9 h 76%E4
.0%E2
1.%E2
2.3%E3
34.5%E4
6.78%E7
99.99%E5
3%E9
76%E4
a .0E%23 b 1.E%25 c 2.3E%31 d 34.5E%45 e 6.78E%73 f 99.99E%56 g 3E%93 h 76E%45
.0E%23
1.E%25
2.3E%31
34.5E%45
6.78E%73
99.99E%56
3E%93
76E%45
a .0E%2 b 1.E%2 c 2.3E%3 d 34.5E%4 e 6.78E%7 f 99.99E%5 g 3E%9 h 76E%4
.0E%2
1.E%2
2.3E%3
34.5E%4
6.78E%7
99.99E%5
3E%9
76E%4
a .0E2%3 b 1.E2%5 c 2.3E3%1 d 34.5E4%5 e 6.78E7%3 f 99.99E5%6 g 3E9%3 h 76E4%5
.0E2%3
1.E2%5
2.3E3%1
34.5E4%5
6.78E7%3
99.99E5%6
3E9%3
76E4%5
a .0E2% b 1.E2% c 2.3E3% d 34.5E4% e 6.78E7% f 99.99E5% g 3E9% h 76E4%
.0E2%
1.E2%
2.3E3%
34.5E4%
6.78E7%
99.99E5%
3E9%
76E4%
a .0E23% b 1.E25% c 2.3E31% d 34.5E45% e 6.78E73% f 99.99E56% g 3E93% h 76E45%
.0E23%
1.E25%
2.3E31%
34.5E45%
6.78E73%
99.99E56%
3E93%
76E45%
